--- a/streamlit/config.toml
+++ b/streamlit/config.toml
@@ -3,3 +3,9 @@ showSidebarNavigation = false
 [server]
 
 runOnSave = true
+[theme]
+primaryColor="#F63366"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#262730"
+font="sans serif"
